# cpp_oop_lab_7

./: CMakeLists.txt  README.md  main.cpp
include/: Game.h  NPC.h  ThreadManager.h  utils.h
src/: Game.cpp  NPC.cpp  ThreadManager.cpp  utils.cpp
test/: test01.cpp
